Updated worker code

--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -52,7 +52,7 @@
       var timestamp = window.performance.timing.navigationStart + window.performance.now();
       var current_time = Math.round(timestamp);
       var random_num = getRandomInt(1, 10000);
-      finish_code = 'D8' + current_time + 'CO' + random_num + '6D';
+      finish_code = 'U7' + current_time + 'DF' + random_num + '9B';
     return finish_code;
   }
 
