Testing db connection

--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -155,6 +155,7 @@
   timeline.push(instructions_block);
   timeline.push(image_block_slider);
   timeline.push(save_data_block);
+  timeline.push(image_block_slider);
 
   /* MTurk information */
   var turkInfo = jsPsych.turk.turkInfo();
