--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Treat perception in images from dash cams</title>
+    <title>Threat perception in images from dash cams</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     <script src='jsPsych/jspsych.js'></script>
     <script src='jsPsych/plugins/jspsych-html-keyboard-response.js'></script>
