--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -45,6 +45,86 @@
     }
   };
 
+var debug = getUrlParameter('debug');
+if (!debug) {
+    debug = SHOW_DEBUG;
+}
+
+// Arrays for storing data
+var image_ids = [];  // IDs of images in stimuli
+var codechart_ids = []; // IDs of codecharts
+var between_blocks = []; // instructions between blocks
+var image_stimuli = []; // blocks with images
+var codechart_stimuli = []; // blocks with codecharts
+
+// browser info
+// https://stackoverflow.com/questions/11219582/how-to-detect-my-browser-version-and-operating-system-using-javascript
+var nVer = navigator.appVersion;
+var nAgt = navigator.userAgent;
+var br_name  = navigator.appName;
+var br_full_version  = ''+parseFloat(navigator.appVersion); 
+var br_major_version = parseInt(navigator.appVersion,10);
+var nameOffset,verOffset,ix;
+
+// In Opera, the true version is after "Opera" or after "Version"
+if ((verOffset=nAgt.indexOf("Opera"))!=-1) {
+ br_name = "Opera";
+ br_full_version = nAgt.substring(verOffset+6);
+ if ((verOffset=nAgt.indexOf("Version"))!=-1) 
+   br_full_version = nAgt.substring(verOffset+8);
+}
+// In MSIE, the true version is after "MSIE" in userAgent
+else if ((verOffset=nAgt.indexOf("MSIE"))!=-1) {
+ br_name = "Microsoft Internet Explorer";
+ br_full_version = nAgt.substring(verOffset+5);
+}
+// In Chrome, the true version is after "Chrome" 
+else if ((verOffset=nAgt.indexOf("Chrome"))!=-1) {
+ br_name = "Chrome";
+ br_full_version = nAgt.substring(verOffset+7);
+}
+// In Safari, the true version is after "Safari" or after "Version" 
+else if ((verOffset=nAgt.indexOf("Safari"))!=-1) {
+ br_name = "Safari";
+ br_full_version = nAgt.substring(verOffset+7);
+ if ((verOffset=nAgt.indexOf("Version"))!=-1) 
+   br_full_version = nAgt.substring(verOffset+8);
+}
+// In Firefox, the true version is after "Firefox" 
+else if ((verOffset=nAgt.indexOf("Firefox"))!=-1) {
+ browserName = "Firefox";
+ br_full_version = nAgt.substring(verOffset+8);
+}
+// In most other browsers, "name/version" is at the end of userAgent 
+else if ( (nameOffset=nAgt.lastIndexOf(' ')+1) < 
+          (verOffset=nAgt.lastIndexOf('/')) ) 
+{
+ browserName = nAgt.substring(nameOffset,verOffset);
+ br_full_version = nAgt.substring(verOffset+1);
+ if (browserName.toLowerCase()==browserName.toUpperCase()) {
+  browserName = navigator.appName;
+ }
+}
+// trim the br_full_version string at semicolon/space if present
+if ((ix=br_full_version.indexOf(";"))!=-1)
+   br_full_version=br_full_version.substring(0,ix);
+if ((ix=br_full_version.indexOf(" "))!=-1)
+   br_full_version=br_full_version.substring(0,ix);
+
+br_major_version = parseInt(''+br_full_version,10);
+if (isNaN(br_major_version)) {
+ br_full_version  = ''+parseFloat(navigator.appVersion); 
+ br_major_version = parseInt(navigator.appVersion,10);
+}
+
+if (debug) {
+    console.log('browser name', br_name);
+    console.log('browser full version', br_full_version);
+    console.log('browser major version', br_major_version);
+    console.log('browser navigator.appName', navigator.appName);
+    console.log('browser navigator.userAgent', navigator.userAgent);
+}
+
   /**
    * Get finish code in the given format.
    */
@@ -99,8 +179,15 @@
     stimulus: '<p>The purpose of this research is to determine overall human threat perception of dash camera images.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer one question by moving a slider. To advance to the next image, the slider needs to be moved. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
     choices: ['C'],
     on_finish: function(data){
-      jsPsych.data.addDataToLastTrial({worker_code: finish_code});
-      jsPsych.data.addDataToLastTrial({image_id: image_ids_slice});
+      jsPsych.data.addDataToLastTrial({
+            worker_code: finish_code,
+            image_id: image_ids_slice,
+            browser_name: br_name,
+            browser_full_version: br_full_version,
+            browser_major_version: br_major_version,
+            browser_app_name: navigator.appName,
+            browser_user_agent: navigator.userAgent
+        });
     }
   };
 
