--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -56,6 +56,7 @@ var codechart_ids = []; // IDs of codecharts
 var between_blocks = []; // instructions between blocks
 var image_stimuli = []; // blocks with images
 var codechart_stimuli = []; // blocks with codecharts
+var SHOW_DEBUG = false; // switch for debugging output
 
 // browser info
 // https://stackoverflow.com/questions/11219582/how-to-detect-my-browser-version-and-operating-system-using-javascript
