--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -162,8 +162,8 @@ if (debug) {
 
   // group 1
   // create array of image_ids, remove 0th id, shuffle
-  var images_n = 209; // number of images + 1
-  var images_participant = 2; // number of images + 1
+  var images_n = 209; // number of images
+  var images_participant = 100; // number of images
   var image_ids = [];
   for (var i = 0; i <= images_n; i++) {
       image_ids.push(i);
