--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -206,7 +206,7 @@ if (debug) {
     labels: ['0', '2', '4', '6', '8', '10'],
     slider_width: 1000,
     // labels: ['Not intuitive at all', 'Completely intuitive'],
-    prompt: "<p style='width: 1000px'>As a driver, how risky do you believe this situation is, on a scale from 0 (no risk) to 10 (extreme risk)?</p>",
+    prompt: "<p style='width: 1000px'>As a driver, how risky is this situation on a scale from 0 to 10 (0 = no risk, 10 = extreme risk)?</p>",
     require_movement: true,
     // response_ends_trial: true,
     on_finish: function(){
