--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -228,7 +228,7 @@ if (debug) {
       image_name = image_prefix + image_ids_slice[i] + '.png';
       image_stimuli.push({
           type: 'image-slider-response',
-          stimulus: image_name
+          stimulus: image_name,
           labels: ['0', '2', '4', '6', '8', '10'],
           slider_width: 1000,
           // labels: ['Not intuitive at all', 'Completely intuitive'],
