--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -18,6 +18,7 @@
 
   // constants
   var SHOW_DEBUG = false; // switch for debugging output
+  var SAVE_DATA = 1;  // save data or not
 
   /**
    * Returns a random integer between min (inclusive) and max (inclusive).
