--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -268,9 +268,9 @@ var save_data_block = {
     console.log('finish_code', finish_code);
     console.log('image_ids', image_ids);
     console.log('image_ids_slice', image_ids_slice);
-    console.log('timeline', timeline);
+    console.log('image_stimuli', image_stimuli);
     console.log('instructions_block', instructions_block);
-    console.log('image_block_slider', image_block_slider);
+    console.log('timeline', timeline);
   }
 
   /* Start the experiment */
